--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "cobalt-website",
 	"private": true,
-	"version": "0.5.0",
+	"version": "0.6.0",
 	"type": "module",
 	"scripts": {
 		"dev": "vite dev",
@@ -15,24 +15,28 @@
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.9",
-		"@eslint/js": "^9.26.0",
-		"@sveltejs/adapter-auto": "^6.0.0",
+		"@eslint/js": "^9.28.0",
+		"@sveltejs/adapter-auto": "^6.0.1",
 		"@sveltejs/adapter-cloudflare": "^7.0.3",
-		"@sveltejs/kit": "^2.20.8",
+		"@sveltejs/kit": "^2.21.1",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
-		"eslint": "^9.26.0",
-		"eslint-plugin-svelte": "^3.5.1",
-		"globals": "^16.1.0",
-		"svelte": "^5.28.2",
-		"svelte-check": "^4.1.7",
+		"@types/semver": "^7.7.0",
+		"eslint": "^9.28.0",
+		"eslint-plugin-svelte": "^3.9.0",
+		"globals": "^16.2.0",
+		"svelte": "^5.33.11",
+		"svelte-check": "^4.2.1",
 		"typescript": "^5.8.3",
-		"typescript-eslint": "^8.32.0",
+		"typescript-eslint": "^8.33.0",
 		"vite": "^6.3.5",
-		"wrangler": "^4.14.4"
+		"wrangler": "^4.18.0"
 	},
 	"pnpm": {
 		"onlyBuiltDependencies": [
 			"esbuild"
 		]
+	},
+	"dependencies": {
+		"semver": "^7.7.2"
 	}
 }
